fix color text contrast on buttons on hover being incorrect

--- a/src/components/units/button/_button.scss
+++ b/src/components/units/button/_button.scss
@@ -19,7 +19,6 @@
   &:focus {
     background-color: darken(siteColor(primary-green), 10);
     border-color: darken(siteColor(primary-green), 10);
-    color: inherit;
     text-decoration: none;
   }
 
@@ -29,7 +28,6 @@
 
     &::after {
       border: 4px solid transparent;
-
       border-left-color: currentColor;
       content: '';
       display: inline-block;
